# ChEF

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  egg.sh  planhere.md  pyproject.toml  requirements.txt  setup.py  tox.ini
app/: main.py
app/api/routes/: api.py  feedback.py  predictor.py  recipe.py
app/core/: config.py  events.py
app/data/: feedback.json
app/db/: food_recipe
app/ml/model/: model_indianfood_fasttext.model
app/models/: prediction.py  recipe.py
app/services/: clean_attributes.py  dump_dataset.py  feedback.py  predict.py  recipe.py
app/src/: data_preparation copy.ipynb  data_preparation.ipynb
app/ui/: helper.py  main.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: sample.html
static/: helper.py  main.py
tests/: nb.py
