[tool.poetry]
name = "isso"
version = "0.1.0"
description = "A short description of the project"
authors = ["Your address email (you@example.com)"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.72.0"
uvicorn = "0.17.4"
pydantic = "^1.3"
requests = "^2.22.0"
loguru = "^0.4.0"
joblib = "^0.15.1"
gensim = "^4.2.0"
textblob = "^0.17.1"
pandas = "^1.4.3"
streamlit = "^1.11.1"
python-multipart = "^0.0.5"
seaborn = "^0.11.2"
boto3 = "^1.24.51"
googletrans = "3.1.0a0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^1.4.4"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"